更新界面和标题限制

--- a/templates/foreBase.html
+++ b/templates/foreBase.html
@@ -18,7 +18,7 @@
     <br/>
 
 
-  <div class="container" ng-app="blacapp">
+  <div class="container">
     <div class="row">
       <img src="/static/img/logo.png" alt="logo">
       <div style="float:right; padding-top: 50px;" >
