手机网站almost完成。

--- a/App/static/seomb/www/templates/menu.html
+++ b/App/static/seomb/www/templates/menu.html
@@ -30,10 +30,10 @@
         <ion-item nav-clear menu-close href="#/app/top/industry">
           行业应用
         </ion-item>
-        <ion-item nav-clear menu-close href="#/app/browse">
+        <ion-item nav-clear menu-close href="#/app/artlist/custom">
           客户案例
         </ion-item>
-        <ion-item nav-clear menu-close ng-click="login()">
+        <ion-item nav-clear menu-close ng-click="showArticle('C6843ABD76400001A9521DC180BF30')">
           联系我们
         </ion-item>
       </ion-list>
