手机端测试版本  0.0.1

--- a/App/static/seomb/www/templates/singArticle.html
+++ b/App/static/seomb/www/templates/singArticle.html
@@ -6,6 +6,11 @@
     </div>
   </ion-header-bar>
   <ion-content>
+
+
+
+
+
     <form>
       <div class="list">
         <label class="item item-input">
@@ -27,5 +32,11 @@
         </label>
       </div>
     </form>
+
+
+    <div data-ng-bind-html="article.content"></div>
+
+
+
   </ion-content>
 </ion-modal-view>
