--- a/App/static/seomb/www/templates/typeList.html
+++ b/App/static/seomb/www/templates/typeList.html
@@ -1,7 +1,7 @@
 <ion-view view-title="文章列表">
   <ion-content>
     <ion-list>
-      <ion-item ng-click="showArticle('C6846E99C550000161C16AD0E02440')" >
+      <ion-item ng-click="showArticle('C6846E99C550000161C16AD0E02440')" ng-if="typeLists[0].id === 'C6843C7532400001808218FE303460'">
         {{typeLists[0].title}}
       </ion-item>
 
