手机网站almost完成。

--- a/templates/foreBase.html
+++ b/templates/foreBase.html
@@ -68,7 +68,8 @@
       <footer class="footer-main">
           <div class="col-xs-4 col-xs-offset-4" style="text-align: center;">
             <ul> 网站备案号：{{ renderVal.webrecord }} </ul>
-            <ul>  </ul>
+
+            <ul> wlink.top  2015 </ul>
 
           </div>
       </footer>
