手机网站almost完成。

--- a/App/static/seomb/www/templates/singArticle.html
+++ b/App/static/seomb/www/templates/singArticle.html
@@ -14,7 +14,7 @@
           <input type="text" ng-model="article.title">
         </label>
         <div class="row" style="min-height: 100px;padding-left:20px;">
-          <div data-ng-bind-html="article.content"></div>
+          <div data-ng-bind-html="tempContent"></div>
         </div>
 
 
